fix(list-competition): fixed background sizing, use clipping mask instead of image asset

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 
-.pixel-corners {
+.pixel-corners-2 {
   clip-path: polygon(
     0px calc(100% - 15px),
     15px calc(100% - 15px),
@@ -14,6 +14,31 @@
     15px 0px,
     15px 15px,
     0px 15px
+  );
+}
+
+.pixel-corners-3 {
+  clip-path: polygon(
+    0px calc(100% - 40px),
+    20px calc(100% - 40px),
+    20px calc(100% - 20px),
+    40px calc(100% - 20px),
+    40px 100%,
+    calc(100% - 40px) 100%,
+    calc(100% - 40px) calc(100% - 20px),
+    calc(100% - 20px) calc(100% - 20px),
+    calc(100% - 20px) calc(100% - 40px),
+    100% calc(100% - 40px),
+    100% 40px,
+    calc(100% - 20px) 40px,
+    calc(100% - 20px) 20px,
+    calc(100% - 40px) 20px,
+    calc(100% - 40px) 0px,
+    40px 0px,
+    40px 20px,
+    20px 20px,
+    20px 40px,
+    0px 40px
   );
 }
 
